--- a/page.html
+++ b/page.html
@@ -21,7 +21,6 @@
     <title>音特电子</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/iconfont.css">
-    <link rel="stylesheet" type="text/css" href="css/magnify.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="app.css">
     <!--[if lt IE 9]>
@@ -33,7 +32,7 @@
 <!-- 通用头部-->
 <header class="header">
     <div class="container">
-        <div class="navIcons pull-left">
+        <div class="navIcons icon-out pull-left" id="showNav">
             <span class="line_icons"></span>
             <span class="line_icons"></span>
             <span class="line_icons"></span>
@@ -45,16 +44,22 @@
                 <img class="upup" src="images/upup.png">
                 <ul>
                     <li class="personList">
-                        <a class="clearfix" href="shop_cart.html"><i class="iconfont icon-gouwuche"></i>购物车</a>
+                        <a class="clearfix" href="person_center.html">我的订单</a>
                     </li>
                     <li class="personList">
-                        <a class="clearfix" href="person_center.html"><i class="iconfont icon-dingdan"></i>我的订单</a>
+                        <a class="clearfix" href="service_after.html">售后服务</a>
                     </li>
                     <li class="personList">
-                        <a class="clearfix" href="index.html"><i class="iconfont icon-shangcheng"></i>我的商城</a>
+                        <a class="clearfix" href="discount.html">优惠券</a>
                     </li>
                     <li class="personList">
-                        <a class="clearfix" href="login.html"><i class="iconfont icon-gerenzhongxin"></i>登录/注册</a>
+                        <a class="clearfix" href="address.html">收货地址</a>
+                    </li>
+                    <li class="personList">
+                        <a class="clearfix" href="myInfo.html">账户资料</a>
+                    </li>
+                    <li class="personList">
+                        <a class="clearfix" href="javascript:void(0);">退出账号</a>
                     </li>
                 </ul>
             </div>
@@ -106,6 +111,42 @@
         </div>
     </div>
 </header>
+<!--侧导航-->
+<aside class="sideBar" id="sideBar">
+    <div class="sideNav">
+        <ul>
+            <li class="sideNav_li">
+                <a class="sideNav_a" href="news/news.html">新闻资讯</a>
+            </li>
+            <li class="sideNav_li">
+                <a class="sideNav_a" href="activity/activity.html">活动中心</a>
+            </li>
+            <li class="sideNav_li">
+                <a class="sideNav_a" href="product.html">音特商城</a>
+            </li>
+            <li class="sideNav_li">
+                <a class="sideNav_a" href="about/about.html">关于我们</a>
+            </li>
+            <li class="sideNav_li">
+                <a class="sideNav_a" href="contact.html">联系我们</a>
+            </li>
+        </ul>
+        <div class="aside_footer">
+            <p class="aside_enter">音特电子（深圳）有限公司</p>
+            <p class="aside_add">深圳市宝安区广兴源宝安互联网产业基地A区3栋305</p>
+            <p class="aside_call">0755-83513870</p>
+            <p class="aside_email">enter.media@gamil.com</p>
+            <div class="footerCodes">
+                <i class="iconfont icon-weibo"></i>
+                <img class="weibo" src="images/weibo-img.jpg">
+                <i class="iconfont icon-weixin2"></i>
+                <img class="weixin" src="images/weixin-img.jpg">
+                <i class="iconfont icon-qq1"></i>
+                <img class="qq" src="images/timg.jpg">
+            </div>
+        </div>
+    </div>
+</aside>
 <!-- 内容区-->
 <section class="page">
     <div class="page-product">
@@ -260,9 +301,9 @@
                             <img class="img-responsive" src="images/page-img-6.jpg">
                         </div>
                     </div>
-                    <div class="circle" id="change">
-                        <img src="img/btn-more.png">
-                    </div>
+                    <!--<div class="circle" id="change">-->
+                        <!--<img src="img/btn-more.png">-->
+                    <!--</div>-->
                     <div class="block2-div">
                         <p class="title sdw-animate e2Title" data-start='{"transform":"translate3d(0,50px,0) "}'
                            data-end='{"transform":"translate3d(0,0px,0) "}' data-speed="1500" data-delay="0s"
@@ -396,66 +437,70 @@
 <!-- footer-->
 <footer id="footer">
     <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                <div class="footerSer">
-                    <div class="row">
-                        <div class="col-md-3">
-                            <div class="footer-top">
-                                <i class="iconfont icon-tianwuliyoubaotui"></i>
-                                <span class="footerService">7天无理由退货</span>
+        <div class="footerOut">
+            <div class="footer_container">
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="footerSer">
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <div class="footer-top">
+                                        <i class="iconfont icon-tianwuliyoubaotui"></i>
+                                        <span class="footerService">7天无理由退货</span>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="footer-top">
+                                        <i class="iconfont icon-tianbaohuan"></i>
+                                        <span class="footerService">30天包换</span>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="footer-top">
+                                        <i class="iconfont icon-quanguobaoyou"></i>
+                                        <span class="footerService">全国包邮</span>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="footer-top">
+                                        <i class="iconfont icon-quanguobaoxiu"></i>
+                                        <span class="footerService">全国联保</span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-md-3">
-                            <div class="footer-top">
-                                <i class="iconfont icon-tianbaohuan"></i>
-                                <span class="footerService">30天包换</span>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="footer-top">
-                                <i class="iconfont icon-quanguobaoyou"></i>
-                                <span class="footerService">全国包邮</span>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="footer-top">
-                                <i class="iconfont icon-quanguobaoxiu"></i>
-                                <span class="footerService">全国联保</span>
-                            </div>
+                        <div class="footerLinks">
+                            <ul class="footerList clearfix">
+                                <li class="footerListLi"><a class="footer_a" href="news/news.html">新闻资讯</a></li>
+                                <li class="footerListLi"><a class="footer_a" href="activity/activity.html">活动中心</a></li>
+                                <li class="footerListLi"><a class="footer_a" href="product.html">音特商城</a></li>
+                                <li class="footerListLi"><a class="footer_a" href="about/about.html">关于我们</a></li>
+                                <li class="footerListLi"><a class="footer_a" href="contact.html">联系我们</a></li>
+                                <li class="footerListLi"><a class="footer_a" href="#">语言：简体中文</a></li>
+                            </ul>
                         </div>
                     </div>
-                </div>
-                <div class="footerLinks">
-                    <ul class="footerList clearfix">
-                        <li class="footerListLi"><a class="footer_a" href="#">新闻资讯</a></li>
-                        <li class="footerListLi"><a class="footer_a" href="#">活动中心</a></li>
-                        <li class="footerListLi"><a class="footer_a" href="#">关于我们</a></li>
-                        <li class="footerListLi"><a class="footer_a" href="#">联系我们</a></li>
-                        <li class="footerListLi"><a class="footer_a" href="#">语言：简体中文</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div id="footerContact">
-                    <strong class="footer-call">400-119-5555</strong>
-                    <p class="footer-text">( 24小时全国服务热线 )</p>
-                    <div class="footerCodes">
-                        <i class="iconfont icon-weibo"></i>
-                        <img class="weibo" src="images/weibo-img.jpg">
-                        <i class="iconfont icon-weixin2"></i>
-                        <img class="weixin" src="images/weixin-img.jpg">
-                        <i class="iconfont icon-qq1"></i>
-                        <img class="qq" src="images/timg.jpg">
+                    <div class="col-md-4">
+                        <div id="footerContact">
+                            <strong class="footer-call">400-119-5555</strong>
+                            <p class="footer-text">( 24小时全国服务热线 )</p>
+                            <div class="footerCodes">
+                                <i class="iconfont icon-weibo"></i>
+                                <img class="weibo" src="images/weibo-img.jpg">
+                                <i class="iconfont icon-weixin2"></i>
+                                <img class="weixin" src="images/weixin-img.jpg">
+                                <i class="iconfont icon-qq1"></i>
+                                <img class="qq" src="images/timg.jpg">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
     <div class="footerBar">
-        <div class="container">
-            © dameigong.cn 2017 皖ICP备17012709号
-        </div>
+        © dameigong.cn 2017 皖ICP备17012709号
     </div>
 </footer>
 <!--addCartModal-->
